cluster/apps/readeck/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: readeck
  labels:
    name: readeck
