cluster/apps/readeck/readeck-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: readeck
  namespace: readeck
spec:
  selector:
    app: readeck
  ports:
    - name: http
      port: 80
      targetPort: 8000
