cluster/apps/readeck/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: readeck
spec:
  selector:
    app: postgres
  ports:
    - port: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: readeck
  namespace: readeck
spec:
  selector:
    app: readeck
  ports:
    - port: 80
      targetPort: 8000
